--- a/config/database.yml
+++ b/config/database.yml
@@ -1,15 +1,11 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
   adapter: mysql2
   database: core_descarga
+  host: localhost
   pool: 5
   timeout: 5000
-  user: fjavier
-  password: 123qweasd
+  user: root
+  password: admin
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
